tests/should_pass/recursion_forward_ref.fit
resource Token { cleanup: revoke }
fn revoke(t: move Token) -> ()

fn outer(t: Token) -> () {
    inner(t)
}

fn inner(t: Token) -> () {
    revoke(t)
}
